Move and insert edge points